feat(intelligence): implement meeting intelligence, action items tracking, and android/web integration